--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
 CHOKIDAR_USEPOLLING=true
-Db_URL=mongodb+srv://varanasi48:Varanasi89*@cluster0.4dosq9v.mongodb.net/?retryWrites=true&w=majority
+DB_URL=mongodb+srv://varanasi48:Varanasi89*@cluster0.4dosq9v.mongodb.net/?retryWrites=true&w=majority
