--- a/amplify.yml
+++ b/amplify.yml
@@ -6,11 +6,11 @@ frontend:
         - npm ci
     build:
       commands:
-        - npm run build
+        - npm start
         
   artifacts:
     # IMPORTANT - Please verify your build output directory
-    baseDirectory: src
+    baseDirectory: 
     files:
       - '**/*'
   cache:
