--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ frontend:
         - npm ci
     build:
       commands:
-        - npm run build
+        - npm install
         - npm start
   artifacts:
     # IMPORTANT - Please verify your build output directory
