--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chart.js": "^3.9.1",
     "classnames": "^2.3.2",
     "core-js": "^3.31.0",
+    "dotenv": "^16.3.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
     "prop-types": "^15.8.1",
