--- a/amplify.yml
+++ b/amplify.yml
@@ -3,14 +3,15 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm ci
+        - npm install
     build:
       commands:
         - npm run build
+        - npm start
         
   artifacts:
     # IMPORTANT - Please verify your build output directory
-    baseDirectory: src
+    baseDirectory: build
     files:
       - '**/*'
   cache:
