--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@coreui/react": "^4.9.0-rc.0",
     "@coreui/react-chartjs": "^2.1.3",
     "@coreui/utils": "^2.0.2",
+    "axios": "^1.4.0",
     "chart.js": "^3.9.1",
     "classnames": "^2.3.2",
     "core-js": "^3.31.0",
@@ -40,7 +41,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
-    "react-router-dom": "^6.14.0",
+    "react-router-dom": "^6.15.0",
     "redux": "4.2.1",
     "simplebar-react": "^2.4.3"
   },
