--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "lint": "eslint \"src/**/*.js\"",
-    "start": "react-scripts start",
+   
+    "start": "concurrently \"react-scripts start\" \"cd backend && npm start\" ",
+    
     "test": "react-scripts test",
     "test:cov": "npm test -- --coverage --watchAll=false",
     "test:debug": "react-scripts --inspect-brk test --runInBand"
@@ -32,10 +34,12 @@
     "axios": "^1.4.0",
     "chart.js": "^3.9.1",
     "classnames": "^2.3.2",
+    "concurrently": "^8.2.0",
     "core-js": "^3.31.0",
     "dotenv": "^16.3.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
+    "nodemon": "^3.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
