--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-REACT_APP_API_URL='https:localhost3.80.42.27:3001'
+REACT_APP_API_URL='http://3.80.42.27:3001'
 REACT_APP_JWT_SECRET=sachin-secret-somerandomkey-skjsdbk09
 CHOKIDAR_USEPOLLING=true
 DB_URL=mongodb+srv://varanasi48:Varanasi89*@cluster0.4dosq9v.mongodb.net/?retryWrites=true&w=majority
