--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "lint": "eslint \"src/**/*.js\"",
-   
-    "start": "concurrently \"react-scripts start\" \"cd backend && npm start\" ",
-    
+    "start": "react-scripts start",
     "test": "react-scripts test",
     "test:cov": "npm test -- --coverage --watchAll=false",
     "test:debug": "react-scripts --inspect-brk test --runInBand"
@@ -37,6 +35,7 @@
     "concurrently": "^8.2.0",
     "core-js": "^3.31.0",
     "dotenv": "^16.3.1",
+    "mdb-react-ui-kit": "^6.2.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
     "nodemon": "^3.0.1",
