--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
+NODE_OPTIONS=--max-old-space-size=4096
 CI=false
 PORT=3000
-REACT_APP_API_URL='https://ec2-3-80-42-27.compute-1.amazonaws.com:3001'
+REACT_APP_API_URL='http://ec2-3-80-42-27.compute-1.amazonaws.com:3001'
 REACT_APP_JWT_SECRET=sachin-secret-somerandomkey-skjsdbk09
 CHOKIDAR_USEPOLLING=true
 DB_URL=mongodb+srv://varanasi48:Varanasi89*@cluster0.4dosq9v.mongodb.net/?retryWrites=true&w=majority
