--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "@coreui/react": "^4.9.0-rc.0",
     "@coreui/react-chartjs": "^2.1.3",
     "@coreui/utils": "^2.0.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.5",
     "axios": "^1.4.0",
     "chart.js": "^3.9.1",
     "classnames": "^2.3.2",
@@ -45,6 +49,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.15.0",
+    "react-select": "^5.7.4",
     "redux": "4.2.1",
     "simplebar-react": "^2.4.3"
   },
