--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "classnames": "^2.3.2",
     "concurrently": "^8.2.0",
     "core-js": "^3.31.0",
+    "country-state-city": "^3.2.0",
     "dotenv": "^16.3.1",
     "mdb-react-ui-kit": "^6.2.0",
     "mongodb": "^5.7.0",
