--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "test:debug": "react-scripts --inspect-brk test --runInBand"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.400.0",
+    "@aws-sdk/s3-request-presigner": "^3.400.0",
     "@coreui/chartjs": "^3.1.2",
     "@coreui/coreui": "^4.2.6",
     "@coreui/icons": "^3.0.1",
@@ -33,7 +35,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
+    "aws-sdk": "^2.1445.0",
     "axios": "^1.4.0",
+    "buffer": "^6.0.3",
     "chart.js": "^3.9.1",
     "classnames": "^2.3.2",
     "concurrently": "^8.2.0",
@@ -50,6 +54,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.15.0",
+    "react-s3": "^1.3.1",
     "react-select": "^5.7.4",
     "redux": "4.2.1",
     "simplebar-react": "^2.4.3"
