--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "concurrently": "^8.2.0",
     "core-js": "^3.31.0",
     "country-state-city": "^3.2.0",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "mdb-react-ui-kit": "^6.2.0",
     "mongodb": "^5.7.0",
