--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.5",
+    "@mui/joy": "^5.0.0-beta.4",
+    "@mui/material": "^5.14.7",
     "aws-sdk": "^2.1445.0",
     "axios": "^1.4.0",
     "buffer": "^6.0.3",
