--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "country-state-city": "^3.2.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
+    "flowbite-react": "^0.5.0",
     "mdb-react-ui-kit": "^6.2.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
