--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 CI=false
 PORT=3000
-REACT_APP_API_URL='https://ec2-3-80-42-27.compute-1.amazonaws.com:3001'
+REACT_APP_API_URL='http://localhost:3001'
 REACT_APP_JWT_SECRET=sachin-secret-somerandomkey-skjsdbk09
 CHOKIDAR_USEPOLLING=true
 DB_URL=mongodb+srv://varanasi48:Varanasi89*@cluster0.4dosq9v.mongodb.net/?retryWrites=true&w=majority
+AWS_ACCESS_KEY_ID=AKIAWPP2ILKA3SQDYNZ4
+AWS_SECRET_ACCESS_KEY=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
