--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/joy": "^5.0.0-beta.4",
     "@mui/material": "^5.14.7",
+    "@zoomus/websdk": "^2.16.0",
     "aws-sdk": "^2.1445.0",
     "axios": "^1.4.0",
     "buffer": "^6.0.3",
