--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
     "react-router-dom": "^6.15.0",
     "react-s3": "^1.3.1",
     "react-select": "^5.7.4",
+    "react-to-print": "^2.14.13",
     "redux": "4.2.1",
-    "simplebar-react": "^2.4.3",
-    "proxy":"https://main.d3j7dt224zzcqc.amplifyapp.com/login/index.html"
+    "simplebar-react": "^2.4.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
