--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/joy": "^5.0.0-beta.4",
     "@mui/material": "^5.14.7",
+    "@mui/x-date-pickers": "^6.14.0",
     "@zoomus/websdk": "^2.16.0",
     "aws-sdk": "^2.1445.0",
     "axios": "^1.4.0",
@@ -46,6 +47,7 @@
     "core-js": "^3.31.0",
     "country-state-city": "^3.2.0",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "flowbite-react": "^0.5.0",
     "mdb-react-ui-kit": "^6.2.0",
