--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
     "nodemon": "^3.0.1",
+    "react": "^18.2.0",
     "react-router-dom": "^6.16.0"
   }
 }
